Fixed PN_EjectInclination Added Spanish translation, thanks forum user @fitiales Added Russian translation, thank forum user @AlexALX Fixed width of time in clock window, should now adjust to the translated text size

--- a/GameData/PreciseNode/Localization/en-us.cfg
+++ b/GameData/PreciseNode/Localization/en-us.cfg
@@ -41,7 +41,7 @@
 		#PN_south = south
 
 		#PN_EjectionAngle = Ejection angle
-		#PN_EjectInclination = Eject. inclination:
+		#PN_EjectInclination = Eject. inclination
 		#PN_Pe = Pe
 		#PN_FocusOn = Focus on
 		#PN_Apoapsis = Apoapsis
@@ -52,7 +52,7 @@
 		#PN_Peri = Peri
 		#PN_DN = DN
 		#PN_MinusOrb = -Orb
-		#PN_PlusOrb =- +Orb
+		#PN_PlusOrb = - +Orb
 		#PN_Minus1K = -1K
 		#PN_Plus1K = +1K
 		#PN_AN = AN
